--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,22 +7,34 @@
     android:layout_height="match_parent"
     tools:context="spikey.com.freeride.MainActivity">
 
-    <!--<TextView-->
-        <!--android:id="@+id/main_textview"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Hello World!"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--app:layout_constraintRight_toRightOf="parent"-->
-        <!--app:layout_constraintTop_toTopOf="parent" />-->
-
     <Button
-        android:id="@+id/db_test"
+        android:id="@+id/button_get_tasks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Database Test"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="Get Tasks"
+        style="@style/Base.Widget.AppCompat.Button.Colored"
+        android:theme="@style/AppTheme.GreenAccent"/>
+
+    <Button
+        android:id="@+id/button_db_connect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="Database Connect"
+        style="@style/Base.Widget.AppCompat.Button.Colored"
+        android:theme="@style/AppThemeBlueAccent"/>
+
+    <TextView
+        android:id="@+id/text_results"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/button_get_tasks"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="RESULTS..."/>
 
 </android.support.constraint.ConstraintLayout>
