--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -44,5 +44,23 @@
 
     </android.support.v7.widget.RecyclerView>
 
+    <android.support.v7.widget.SwitchCompat
+        android:id="@+id/switch_show_all_markers"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toLeftOf="@id/switch_show_all_markers"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/switch_show_all_markers"
+        android:layout_marginRight="8dp"
+        android:text="SHOW ALL MARKERS"
+        />
+
 
 </android.support.constraint.ConstraintLayout>
