--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,25 +1,24 @@
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="AppThemeBlueAccent" parent="Widget.AppCompat.Button.Colored">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorBlueDark</item>
+    <style name="ColoredButton">
         <item name="android:textColor">@android:color/white</item>
     </style>
-
-    <style name="AppTheme.GreenAccent">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    <style name="ColoredButton.Blue">
+        <item name="colorAccent">@color/colorBlueDark</item>
+    </style>
+    <style name="ColoredButton.Green">
         <item name="colorAccent">@color/colorGreenDark</item>
-        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="SingleLineText">
+        <item name="android:singleLine">true</item>
+        <!--android:maxLines can cause crashes with ellipses-->
     </style>
 
 </resources>
