--- a/app/src/main/res/layout/task_card_view.xml
+++ b/app/src/main/res/layout/task_card_view.xml
@@ -8,6 +8,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/task_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardElevation="12dp"
