Google map padding solves all map positioning problems. Map shows task start and end location. Older code hack left in for reference.

--- a/app/src/main/res/layout/task_card_view.xml
+++ b/app/src/main/res/layout/task_card_view.xml
@@ -8,7 +8,8 @@
     android:layout_height="match_parent"
     app:cardElevation="12dp"
     app:cardCornerRadius="4dp"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    app:cardBackgroundColor="@color/colorAccent">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -24,8 +25,7 @@
             android:layout_toLeftOf="@id/task_more_info_icon_button"
             android:paddingTop="8dp"
             android:paddingStart="16dp"
-            tools:text="Title"
-            android:text="@{task.title}" />
+            tools:text="Title" />
 
         <TextView
             android:id="@+id/task_start_location"
@@ -35,7 +35,7 @@
             android:layout_below="@id/task_title"
             android:layout_toLeftOf="@id/task_more_info_icon_button"
             android:paddingStart="16dp"
-            android:text="Start Location" />
+            tools:text="Start Location" />
 
         <TextView
             android:id="@+id/task_end_location"
@@ -44,7 +44,7 @@
             android:layout_alignParentStart="true"
             android:layout_below="@id/task_start_location"
             android:paddingStart="16dp"
-            android:text="End Location" />
+            tools:text="End Location" />
 
         <TextView
             android:id="@+id/task_time"
@@ -53,7 +53,7 @@
             android:layout_alignParentStart="true"
             android:layout_below="@id/task_end_location"
             android:paddingStart="16dp"
-            android:text="Time" />
+            tools:text="Time" />
 
         <TextView
             android:id="@+id/task_distance"
@@ -62,7 +62,7 @@
             android:layout_alignParentStart="true"
             android:layout_below="@id/task_time"
             android:paddingStart="16dp"
-            android:text="Distance" />
+            tools:text="Distance" />
 
         <TextView
             android:id="@+id/task_incentive"
@@ -72,8 +72,7 @@
             android:layout_below="@id/task_distance"
             android:layout_above="@id/task_more_info_button"
             android:paddingStart="16dp"
-            tools:text="Incentive"
-            android:text="@{String.valueOf(task.incentive)}" />
+            tools:text="Incentive"/>
 
 
 
@@ -83,8 +82,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:padding="8dp"
             style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="2dp"
             android:textColor="@android:color/white"
             android:text="ACCEPT"/>
 
@@ -93,9 +93,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:padding="8dp"
             android:layout_toStartOf="@id/task_accept_button"
             style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_marginBottom="2dp"
             android:textColor="@android:color/white"
             android:text="DISMISS"/>
 
@@ -104,9 +104,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_toStartOf="@id/task_dismiss_button"
-            android:padding="8dp"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_alignParentStart="true"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_marginStart="4dp"
+            android:layout_marginBottom="2dp"
             android:textColor="@android:color/white"
             android:text="MORE INFO"/>
 
@@ -116,13 +117,12 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:padding="8dp"
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:textColor="@android:color/white"
             android:drawableEnd="@drawable/ic_stat_name"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
             android:drawablePadding="8dp"
-            android:text="Details"/>
+            android:text="Details" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
