--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,4 +37,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="RESULTS..."/>
 
+    <ProgressBar
+        android:id="@+id/progress_circle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toLeftOf="@id/button_db_connect"
+        app:layout_constraintLeft_toRightOf="@id/button_get_tasks"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:visibility="invisible"/>
+
 </android.support.constraint.ConstraintLayout>
