--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,6 +27,7 @@
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">15sp</item>
         <item name="android:background">@null</item>
+        <item name="colorAccent">@color/colorGreenDark</item>
     </style>
 
 
