--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,64 @@
     <color name="taskCardColor16">#FF5722</color>
     <color name="taskCardColorSELECTED">@android:color/white</color>
     <color name="taskCardColorSELECTED2">@android:color/black</color>
+    
+    
+<!-- Material 500 colors -->
+    <color name="myTaskCardColor1">#e63a2e</color>
+    <color name="myTaskCardColor2">#e62e6b</color>
+    <color name="myTaskCardColor3">#ca2ee6</color>
+    <color name="myTaskCardColor4">#712ee6</color>
+    <color name="myTaskCardColor5">#2e49e6</color>
+    <color name="myTaskCardColor6">#2e93e6</color>
+    <color name="myTaskCardColor7">#2eabe6</color>
+    <color name="myTaskCardColor8">#2ed0e6</color>
+    <color name="myTaskCardColor9">#2ee6d3</color>
+    <color name="myTaskCardColor10">#2ee634</color>
+    <color name="myTaskCardColor11">#90e62e</color>
+    <color name="myTaskCardColor12">#d3e62e</color>
+    <color name="myTaskCardColor13">#e6d32e</color>
+    <color name="myTaskCardColor14">#e6b82e</color>
+    <color name="myTaskCardColor15">#e69c2e</color>
+    <color name="myTaskCardColor16">#e6592e</color>
+    <color name="myTaskCardColorSELECTED">@android:color/white</color>
+    <color name="myTaskCardColorSELECTED2">@android:color/black</color>
+
+    <!-- Material 700 colors -->
+    <color name="taskCardColorDark1">#d32f2f</color>
+    <color name="taskCardColorDark2">#C2185B</color>
+    <color name="taskCardColorDark3">#7B1FA2</color>
+    <color name="taskCardColorDark4">#512DA8</color>
+    <color name="taskCardColorDark5">#303F9F</color>
+    <color name="taskCardColorDark6">#1976D2</color>
+    <color name="taskCardColorDark7">#0288D1</color>
+    <color name="taskCardColorDark8">#0097A7</color>
+    <color name="taskCardColorDark9">#00796B</color>
+    <color name="taskCardColorDark10">#388E3C</color>
+    <color name="taskCardColorDark11">#689F38</color>
+    <color name="taskCardColorDark12">#AFB42B</color>
+    <color name="taskCardColorDark13">#FBC02D</color>
+    <color name="taskCardColorDark14">#FFA000</color>
+    <color name="taskCardColorDark15">#F57C00</color>
+    <color name="taskCardColorDark16">#E64A19</color>
+
+    <!-- Material 300 colors -->
+    <color name="taskCardColorLight1">#e57373</color>
+    <color name="taskCardColorLight2">#F06292</color>
+    <color name="taskCardColorLight3">#BA68C8</color>
+    <color name="taskCardColorLight4">#9575CD</color>
+    <color name="taskCardColorLight5">#7986CB</color>
+    <color name="taskCardColorLight6">#64B5F6</color>
+    <color name="taskCardColorLight7">#4FC3F7</color>
+    <color name="taskCardColorLight8">#4DD0E1</color>
+    <color name="taskCardColorLight9">#4DB6AC</color>
+    <color name="taskCardColorLight10">#81C784</color>
+    <color name="taskCardColorLight11">#AED581</color>
+    <color name="taskCardColorLight12">#DCE775</color>
+    <color name="taskCardColorLight13">#FFF176</color>
+    <color name="taskCardColorLight14">#FFD54F</color>
+    <color name="taskCardColorLight15">#FFB74D</color>
+    <color name="taskCardColorLight16">#FF8A65</color>
+
+
+
 </resources>
