--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,8 +24,8 @@
     <style name="TaskCard">
         <item name="android:singleLine">true</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Body1</item>
-        <item name="android:textColor">@android:color/black</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:background">@null</item>
         <item name="colorAccent">@color/colorGreenDark</item>
     </style>
@@ -36,5 +36,11 @@
         <item name="android:layout_margin">8dp</item>
     </style>
 
+    <style name="ButtonColored" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:textSize">15sp</item>
+    </style>
+    <style name="ButtonFlat" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:textSize">15sp</item>
+    </style>
 
 </resources>
