--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,5 +1,4 @@
-<!--tools:layout="@layout/fragment_maps"-->
-<!--todo change to frame layout-->
+
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -19,7 +18,7 @@
     <fragment
         android:id="@+id/map_view"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        tools:context="freeride.spikey.com.freeride.MapsActivity"
+        tools:context="freeride.spikey.com.freeride.TasksAndMapActivity"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
