--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -37,7 +37,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@android:color/transparent"
-        android:orientation="vertical"
+        android:orientation="horizontal"
+        android:clipToPadding="false"
         >
 
 
