--- a/app/src/main/res/layout/task_card_view.xml
+++ b/app/src/main/res/layout/task_card_view.xml
@@ -8,7 +8,10 @@
     android:layout_height="match_parent"
     app:cardElevation="12dp"
     app:cardCornerRadius="4dp"
-    android:layout_margin="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginTop="13dp"
     app:cardBackgroundColor="@color/colorAccent">
 
     <RelativeLayout
