--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,7 +33,9 @@
     <style name="TaskDetails">
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textViewStyle">@style/TextAppearance.AppCompat.Large</item>
-        <item name="android:layout_margin">8dp</item>
+        <item name="android:layout_marginLeft">4dp</item>
+        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:singleLine">true</item>
     </style>
 
     <style name="ButtonColored" parent="Widget.AppCompat.Button.Colored">
