--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,44 +7,142 @@
     android:layout_height="match_parent"
     tools:context="spikey.com.freeride.MainActivity">
 
-    <Button
-        android:id="@+id/button_get_tasks"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="Get Tasks"
-        style="@style/Base.Widget.AppCompat.Button.Colored"
-        android:theme="@style/ColoredButton.Green"/>
-
-    <Button
-        android:id="@+id/button_db_connect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="Database Connect"
-        style="@style/Base.Widget.AppCompat.Button.Colored"
-        android:theme="@style/ColoredButton.Blue"/>
-
     <TextView
-        android:id="@+id/text_results"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/button_get_tasks"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="RESULTS..."/>
+        android:id="@+id/search_tasks_heading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
+
+        android:layout_margin="8dp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="24sp"
+        android:text="@string/searching_tasks"
+        />
 
     <ProgressBar
         android:id="@+id/progress_circle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintRight_toLeftOf="@id/button_db_connect"
-        app:layout_constraintLeft_toRightOf="@id/button_get_tasks"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:visibility="invisible"/>
+
+        android:visibility="invisible"
+        />
+
+    <View
+        android:id="@+id/separator1"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintTop_toBottomOf="@id/search_tasks_heading"
+
+        android:layout_margin="8dp"
+        android:background="@color/colorPrimary"
+        />
+
+
+    <Switch
+        android:id="@+id/location_type_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/separator1"
+        app:layout_constraintStart_toStartOf="parent"
+
+        android:layout_margin="8dp"
+        android:textOff="1"
+        android:textOn="2"
+        android:showText="true"
+        />
+
+    <TextView
+        android:id="@+id/location_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/separator1"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        android:layout_margin="8dp"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:text="@string/one_location_tasks"
+        />
+
+    <Button
+        android:id="@+id/button_get_tasks"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/location_type_switch"
+
+        android:layout_margin="8dp"
+        android:text="@string/get_tasks"
+        style="@style/Base.Widget.AppCompat.Button.Colored"
+        android:theme="@style/ColoredButton.Green"
+        />
+
+    <View
+        android:id="@+id/separator2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintTop_toBottomOf="@id/button_get_tasks"
+
+        android:layout_margin="8dp"
+        android:background="@color/colorPrimary"
+        />
+
+    <TextView
+        android:id="@+id/connected_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/separator2"
+
+        android:layout_margin="8dp"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:text="@string/connected"
+        />
+
+    <TextView
+        android:id="@+id/connected_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/separator2"
+
+        android:layout_margin="8dp"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        tools:text="True/False"
+        />
+
+    <Button
+        android:id="@+id/button_db_connect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/connected_label"
+
+
+        android:layout_margin="8dp"
+        android:text="@string/database_connect"
+        style="@style/Base.Widget.AppCompat.Button.Colored"
+        android:theme="@style/ColoredButton.Blue"
+        />
+
+    <View
+        android:id="@+id/separator3"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintTop_toBottomOf="@id/button_db_connect"
+
+        android:layout_margin="8dp"
+        android:background="@color/colorPrimary"
+        />
+
 
 </android.support.constraint.ConstraintLayout>
